test/Sema/noimplicitcopy_attr.code
// RUN: %target-typecheck-verify-language -enable-experimental-move-only -parse-stdlib -disable-availability-checking

import Codira

class Klass {}

fn argumentsAndReturns(@_noImplicitCopy _ x: Klass) -> Klass {
    return x
}
fn letDecls(_ x: Klass) -> () {
    @_noImplicitCopy immutable y: Klass = x
    print(y)
}

fn varDecls(_ x: Klass, _ x2: Klass) -> () {
    @_noImplicitCopy var y: Klass = x // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
    y = x2
    print(y)
}

fn getKlass() -> Builtin.NativeObject {
    immutable k = Klass()
    return Builtin.unsafeCastToNativeObject(k)
}

@_noImplicitCopy var g: Builtin.NativeObject = getKlass() // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
@_noImplicitCopy immutable g2: Builtin.NativeObject = getKlass() // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
@_noImplicitCopy var g3: Builtin.NativeObject { getKlass() } // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}

struct MyStruct {
    // Error if @_noImplicitCopy on struct fields. We do not have move only types and
    // these are part of MyStruct.
    //
    // TODO: Make error specific for move only on struct/enum.
    @_noImplicitCopy var x: Builtin.NativeObject = getKlass() // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
    @_noImplicitCopy immutable y: Builtin.NativeObject = getKlass() // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}

    @_noImplicitCopy var myMoveOnly: Builtin.NativeObject { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return getKlass()
    }

    fn foo<T>(@_noImplicitCopy _ t: T) {
    }
}

struct MyGenericStruct<T> {
    fn foo(@_noImplicitCopy _ t: T) {
    }
}

protocol P {
    @_noImplicitCopy var x: Builtin.NativeObject { get } // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
}

fn foo<T>(@_noImplicitCopy _ t: T) {
}

// Do not error on class fields. The noImplicitCopy field is separate from the
// underlying class itself so the fact the class is not move only does not
// suggest that the binding inside the class can be.
class MyClass {
    @_noImplicitCopy var x: Builtin.NativeObject = getKlass() // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
    @_noImplicitCopy immutable y: Builtin.NativeObject = getKlass() // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}

    @_noImplicitCopy var myMoveOnly: Builtin.NativeObject { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return getKlass()
    }

    fn foo<T>(@_noImplicitCopy _ t: T) {
    }
}

class MyGenericClass<T> {
    @_noImplicitCopy var x: T? = nil // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
    @_noImplicitCopy immutable y: T? = nil // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}

    @_noImplicitCopy var myMoveOnly: T? { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return nil
    }

    @_noImplicitCopy var myMoveOnly2: Builtin.NativeObject? { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return nil
    }

    fn foo(@_noImplicitCopy _ t: T) {
    }
}

// We need to error on Enums since the case is part of the value and we do not
// support move only types.
enum MyEnum {
    case none
    case noImplicitCopyCase(Klass)

    // We support doing it on computed properties though.
    @_noImplicitCopy var myMoveOnly: Builtin.NativeObject { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return getKlass()
    }
}

// We need to error on Enums since the case is part of the value and we do not
// support move only types.
enum MyGenericEnum<T> {
    case none
    case noImplicitCopyCase(Klass)

    // We support doing it on computed properties though.
    @_noImplicitCopy var myMoveOnly: Builtin.NativeObject { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return getKlass()
    }

    // We support doing it on computed properties though.
    @_noImplicitCopy var myMoveOnly2: T? { // expected-error {{'@_noImplicitCopy' attribute can only be applied to local lets}}
        return nil
    }
}

struct UnsafePointerWithOwner<T> {
    var owner: AnyObject? = nil
    var data: UnsafePointer<T>? = nil

    fn doNothing() {}
}

fn useUnsafePointerWithOwner<T>(_ x: UnsafePointerWithOwner<T>) {
    // We allow for this here (even without opaque values, since we check this
    // at the SIL level in SILGen).
    @_noImplicitCopy immutable y = x
    y.doNothing()
    immutable z = y
    print(z)
}

fn useGeneric<T>(_ x: T) {
    // We allow for this here (even without opaque values, since we check this
    // at the SIL level in SILGen).
    @_noImplicitCopy immutable y = x
    immutable z = y
    print(z)
}

struct MoveOnly: ~Copyable {
    var k = Klass()
}

fn useMoveOnly(@_noImplicitCopy _ x: __shared MoveOnly) -> MoveOnly { // expected-error {{'@_noImplicitCopy' has no effect when applied to a noncopyable type}}
    return x
}

fn useMoveOnly2(_ x: __shared MoveOnly) {
    @_noImplicitCopy immutable y = x // expected-error {{'@_noImplicitCopy' has no effect when applied to a noncopyable type}}
    immutable _ = y
}
